<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/scanFragment"
        android:icon="@drawable/ic_scan"
        android:title="@string/nav_scan" />
    
    <item
        android:id="@+id/writeFragment"
        android:icon="@drawable/ic_write"
        android:title="@string/nav_write" />
    
    <item
        android:id="@+id/emulateFragment"
        android:icon="@drawable/ic_emulate"
        android:title="@string/nav_emulate" />
    
    <item
        android:id="@+id/historyFragment"
        android:icon="@drawable/ic_history"
        android:title="@string/nav_history" />
    
    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_settings"
        android:title="@string/nav_settings" />
</menu>

